# pipedoc

./: .envrc  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  EVENTS.md  LICENSE  LOGGING.md  README.md  demo.py  justfile  pyproject.toml  ruff.toml
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: claude.yml
examples/: event_handlers_demo.py
scripts/: check-version-sync.py
src/pipedoc/: __init__.py  app_logger.py  cli.py  connection_events.py  connection_manager.py  content_processor.py  event_handlers.py  event_system.py  file_finder.py  logging_config.py  metrics_collector.py  pipe_manager.py  pipe_manager_legacy.py  pipe_resource.py  server.py  worker_pool.py
tasks/: pipe-handling-improvements.md
tests/: conftest.py  test_cli.py  test_connection_events.py  test_connection_manager.py  test_connection_manager_simple.py  test_content_processor.py  test_enhanced_error_handling.py  test_enhanced_pipe_manager_integration.py  test_event_handlers.py  test_event_system_integration.py  test_file_finder.py  test_integration.py  test_metrics_collector.py  test_performance_integration.py  test_pipe_manager.py  test_pipe_resource.py  test_server.py  test_worker_pool.py
