[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipedoc"
version = "1.0.0"
description = "A Python utility that serves concatenated markdown files through a named pipe to multiple processes simultaneously"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "David Nugent", email = "davidn@uniquode.io"},
]
keywords = ["markdown", "documentation", "pipe", "cli", "concatenation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/deeprave/pipedoc"
Repository = "https://github.com/deeprave/pipedoc"
Issues = "https://github.com/deeprave/pipedoc/issues"
Changelog = "https://github.com/deeprave/pipedoc/blob/main/CHANGELOG.md"

[project.scripts]
pipedoc = "pipedoc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pipedoc"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.4",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
show_missing = true
precision = 1

[tool.coverage.html]
directory = "htmlcov"
